getLast modificado